syntax = "proto3";

package pos;

import "finance.proto";

option go_package = "github.com/joseluis8906/project-layout/internal/pos/pb";

service OrderService {
    rpc Create(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
    string customer = 1;
}

message CreateOrderResponse {
    uint64 number = 1;
}

message Item {
    string name = 1;
    integrations.Money price = 2;
}
